<?xml version="1.0" encoding="utf-8"?>
<resources>
    
     <string name="app_name">MamaCare App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Welcome to MamaCare </string>
    <string name="content_title">MamaCare Dashboard</string>
    
    <!-- Buttons -->
    <string name="btnLogin">Login</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnAddWoman">Register</string>
    
    <!-- Labels -->
    <string name="image_description">Image description</string>
    <string name="username">Username:</string>
    <string name="password">Password</string>
    <string name="login_welcome_txt">Welcome to MamaCare</string>
    <string name="first_name">First Name *:</string>
    <string name="last_name">Last Name *:</string>
    <string name="age">Age:</string>
    <string name="address">Address:</string>

</resources>
