<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentTop="true"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:weightSum="100" >

    <include layout="@layout/breadcrum" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/app_firstname_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical|center_horizontal"
                android:layout_weight="20"
                android:gravity="left|center_vertical|center_horizontal"
                android:padding="@dimen/dim_5"
                android:text="@string/first_name"
                android:textColor="#000000"
                android:textSize="@dimen/dim_12" />

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="First Name" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/app_lastname_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical|center_horizontal"
                android:layout_weight="20"
                android:gravity="left|center_vertical|center_horizontal"
                android:padding="@dimen/dim_5"
                android:text="@string/last_name"
                android:textColor="#000000"
                android:textSize="@dimen/dim_12" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Last Name" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/app_age_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical|center_horizontal"
                android:layout_weight="20"
                android:gravity="left|center_vertical|center_horizontal"
                android:padding="@dimen/dim_5"
                android:inputType="number"
                android:text="@string/age"
                android:textColor="#000000"
                android:textSize="@dimen/dim_12" />

            <EditText
                android:id="@+id/editTextAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Age" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/app_address_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical|center_horizontal"
                android:layout_weight="20"
                android:gravity="left|center_vertical|center_horizontal"
                android:padding="@dimen/dim_5"
                android:text="@string/address"
                android:textColor="#000000"
                android:textSize="@dimen/dim_12" />

            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Address" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/saveWomanBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="left|bottom"
                android:layout_marginLeft="@dimen/dim_10"
                android:layout_weight="30"
                android:background="@drawable/button_shape_borderless"
                android:padding="10dp"
                android:text="@string/btnSave"
                android:textColor="@color/black"
                android:textSize="@dimen/dim_12" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>